# Rust-Web-Example

./: README.md
rust-web/: Cargo.toml  questions.json
rust-web-frontend/: Cargo.toml  index.html
rust-web-frontend/src/: cookie.rs  finder.rs  main.rs  qna.rs
rust-web/src/: api.rs  main.rs  qabase.rs  qna.rs
